--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,14 +12,77 @@ h1, h2, h3 {
   font-weight: bold;
 }
 
-.home {
-  max-width: 990px;
-  border: solid red 1px;
-  color: red;
+a {
+  text-decoration: none;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Prompt', sans-serif;
+  font-weight: lighter;
+}
+
+h1, h2, h3 {
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+}
+
+.home-wrapper {
+  max-width: 1300px;
+  margin: auto;
+  border: purple solid 1px;
+}
+
+.about-me-section {
+  border: purple solid 1px;
+  padding: 3% 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.about-me-section .bio {
+  line-height: 30px;
+}
+
+.about-me-section .bio h2 {
+  font-size: 4rem;
+}
+
+.about-me-section .bio div a {
+  color: #00916e;
+}
+
+.about-me-section .avatar {
+  width: 40%;
+  border: purple solid 1px;
+  padding-right: 20%;
+}
+
+.about-me-section .avatar img {
+  width: 400px;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 30%;
+     object-position: 50% 30%;
 }
 
 .btn {
-  margin: 5%;
+  margin: 5% 0;
   text-transform: capitalize;
   background: #00916e;
   border: solid 1px #00916e;
@@ -40,7 +103,7 @@ h1, h2, h3 {
 }
 
 .light-mode {
-  background: #fff;
+  background: #eeecec;
   color: #292929;
 }
 
@@ -136,7 +199,6 @@ header {
 
 .menu__nav-bar--links a {
   color: #d3d3d3;
-  text-decoration: none;
   text-transform: capitalize;
   padding: 3%;
   font-weight: 700;
@@ -242,7 +304,6 @@ header {
 
 main {
   width: 100%;
-  border: solid red 1px;
-  margin: 0 auto;
+  border: solid purple 1px;
 }
 /*# sourceMappingURL=App.css.map */
