--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -1,46 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;1,400;1,700&family=Prompt:ital,wght@0,300;0,400;0,700;1,400;1,700&family=Varela+Round&display=swap");
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: 'Prompt', sans-serif;
-  font-weight: lighter;
-}
-
-h1, h2, h3 {
-  font-weight: bold;
-}
-
-a {
-  text-decoration: none;
-}
-
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: 'Prompt', sans-serif;
-  font-weight: lighter;
-}
-
-h1, h2, h3 {
-  font-weight: bold;
-}
-
-a {
-  text-decoration: none;
-}
-
-.home-wrapper {
-  max-width: 1300px;
-  margin: auto;
-  border: purple solid 1px;
+.about-me-section .skills-section {
+  width: 100%;
+  overflow: hidden;
 }
 
 .about-me-section {
-  border: purple solid 1px;
+  border-bottom: solid 1px rgba(179, 175, 175, 0.1);
+}
+
+.about-me-section__container {
+  max-width: 1300px;
+  margin: auto;
   padding: 3% 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -54,31 +24,91 @@ a {
   width: 100%;
 }
 
-.about-me-section .bio {
+.about-me-section__container .bio {
   line-height: 30px;
 }
 
-.about-me-section .bio h2 {
-  font-size: 4rem;
+.about-me-section__container .bio h2 {
+  font-size: 3.5rem;
 }
 
-.about-me-section .bio div a {
+.about-me-section__container .bio .btn-secondary {
+  background: #355070;
+  border: solid 1px #355070;
+}
+
+.about-me-section__container .bio .btn {
+  margin-right: 40px;
+}
+
+.about-me-section__container .bio .btn:hover {
+  opacity: 0.9;
+}
+
+.about-me-section__container .bio a {
   color: #00916e;
 }
 
-.about-me-section .avatar {
+.about-me-section__container .avatar {
   width: 40%;
-  border: purple solid 1px;
   padding-right: 20%;
 }
 
-.about-me-section .avatar img {
+.about-me-section__container .avatar img {
   width: 400px;
   height: 300px;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: 50% 30%;
-     object-position: 50% 30%;
+  -o-object-position: 50% 20%;
+     object-position: 50% 20%;
+  -webkit-box-shadow: 0 5px 10px rgba(68, 71, 85, 0.4);
+          box-shadow: 0 5px 10px rgba(68, 71, 85, 0.4);
+}
+
+.skills-section__container {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 2% 0;
+}
+
+.skills-section__container .skills-intro {
+  padding-left: 2%;
+  line-height: 30px;
+}
+
+.skills-section__container .skills-intro div:first-child {
+  height: 100px;
+  border: solid red 1px;
+}
+
+.skills-section__container .skills-intro div:first-child::before {
+  content: '';
+  display: inline-block;
+  background: #00916e;
+  width: 7px;
+  height: 100%;
+  margin: 0 20px 5px;
+}
+
+.portfolio {
+  color: red;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Prompt', sans-serif;
+  font-weight: lighter;
+}
+
+h1, h2, h3 {
+  font-weight: bold;
+}
+
+a:link {
+  text-decoration: none;
 }
 
 .btn {
@@ -98,8 +128,8 @@ a {
 }
 
 .dark-mode {
-  background: #161925;
-  color: #e5e2e2;
+  background: #07121b;
+  color: #cfcccc;
 }
 
 .light-mode {
@@ -118,9 +148,8 @@ header {
   position: fixed;
   height: 100%;
   text-align: center;
-  border-right: solid 7px #545a64;
   padding: 30px 20px;
-  color: #e5e2e2;
+  color: #cfcccc;
 }
 
 .header__light {
@@ -159,7 +188,7 @@ header {
 }
 
 .menu__intro--links a i:hover {
-  color: #e5e2e2;
+  color: #cfcccc;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   -webkit-transform: scale(1.2);
@@ -167,7 +196,7 @@ header {
 }
 
 .menu__intro--links a .light {
-  color: #e5e2e2 !important;
+  color: #cfcccc !important;
 }
 
 .menu__nav-bar {
@@ -211,7 +240,7 @@ header {
 }
 
 .menu__nav-bar--links a:hover {
-  color: #e5e2e2;
+  color: #cfcccc;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   text-shadow: 0 0 15px #fff, 0 0 20px #367a5d, 0 0 25px #367a5d, 0 0 30px #367a5d, 0 0 35px #367a5d, 0 0 40px #367a5d, 0 0 45px #367a5d;
@@ -304,6 +333,5 @@ header {
 
 main {
   width: 100%;
-  border: solid purple 1px;
 }
 /*# sourceMappingURL=App.css.map */
