--- a/src/styles/scss/_home.scss
+++ b/src/styles/scss/_home.scss
@@ -15,7 +15,7 @@
     border-bottom: solid 1px rgba(179, 175, 175, 0.1);
 
     &__container {
-        max-width: $desktop;
+        max-width: 80%;
         margin: auto;
         padding: 3% 0;
         @include flex-row;
@@ -38,7 +38,6 @@
             a {
                 color: $dark-mode-primary-color;
             }
-
         }
 
         .avatar {
@@ -65,28 +64,41 @@
         max-width: $desktop;
         margin: 0 auto;
         padding: 2% 0;
+        border: solid red 1px;
 
         .skills-intro {
-            // position: relative;
-            padding-left: 2%;
-            line-height: 30px;
-
+            position: relative;
             div:first-child {
-                height: 100px;
-                border: solid red 1px;
+                padding-left: 1%;
+                vertical-align: center;
                 &::before {
                     content: '';
-                    display: inline-block;
+                    position: absolute;
                     background: $dark-mode-primary-color;
                     width: 7px;
-                    height: 100%;
+                    height: 70%;
                     margin: 0 20px 5px;
-                    // position: absolute;
-                    // top: 0;
-                    // left:0;
+                    left: -20px;
+                    bottom: 30px;
+                }
+            }
+            div:nth-child(2) {
+                padding: 5px 0;
+                a {
+                    color: $dark-mode-primary-color;
                 }
             }
 
+        }
+
+        .skills-container {
+            @include flex-row;
+            width: 100%;
+            border: solid purple 1px;
+            .skill{
+                width: 25%;
+                border: solid blue 1px;
+            }
         }
     }
 }
