--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -1,7 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Prompt:ital,wght@0,300;0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,700&display=swap");
-.about-me-section .skills-section {
+.about-me-section, .skills-section, .testimonials-section, .projects-section {
   width: 100%;
   overflow: hidden;
+}
+
+.about-me-section__container, .skills-section__container, .testimonials-section__container, .projects-section__container {
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 2% 0;
+}
+
+.intro {
+  position: relative;
+}
+
+.intro .topic-title {
+  padding-left: 2%;
+  vertical-align: center;
+}
+
+.intro .topic-title::before {
+  content: '';
+  position: absolute;
+  background: #06ac85;
+  width: 6px;
+  height: 40px;
+  margin: 0 20px 5px;
+  left: -20px;
 }
 
 .about-me-section {
@@ -9,8 +34,6 @@
 }
 
 .about-me-section__container {
-  max-width: 80%;
-  margin: auto;
   padding: 3% 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -24,10 +47,33 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+@media (max-width: 650px) {
+  .about-me-section__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    border: solid 1px red;
+  }
 }
 
 .about-me-section__container .bio {
   line-height: 30px;
+  padding-right: 3%;
 }
 
 .about-me-section__container .bio h2 {
@@ -47,8 +93,14 @@
   opacity: 0.9;
 }
 
+@media (max-width: 1140px) {
+  .about-me-section__container .bio .btn {
+    margin: 10px 5px;
+  }
+}
+
 .about-me-section__container .bio a {
-  color: #00916e;
+  color: #06ac85;
 }
 
 .about-me-section__container .avatar {
@@ -67,39 +119,38 @@
           box-shadow: 0 5px 10px rgba(68, 71, 85, 0.4);
 }
 
+@media (max-width: 1300px) {
+  .about-me-section__container .avatar img {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media (max-width: 1140px) {
+  .about-me-section__container .avatar img {
+    width: 250px;
+    height: 250px;
+  }
+}
+
+@media (max-width: 650px) {
+  .about-me-section__container .avatar img {
+    width: 200px;
+    height: 200px;
+    margin: 8px;
+  }
+}
+
 .skills-section__container {
-  max-width: 1300px;
-  margin: 0 auto;
   padding: 2% 0;
-  border: solid red 1px;
 }
 
-.skills-section__container .skills-intro {
-  position: relative;
-}
-
-.skills-section__container .skills-intro div:first-child {
-  padding-left: 1%;
-  vertical-align: center;
-}
-
-.skills-section__container .skills-intro div:first-child::before {
-  content: '';
-  position: absolute;
-  background: #00916e;
-  width: 7px;
-  height: 70%;
-  margin: 0 20px 5px;
-  left: -20px;
-  bottom: 30px;
-}
-
-.skills-section__container .skills-intro div:nth-child(2) {
+.skills-section__container .intro div:nth-child(2) {
   padding: 5px 0;
 }
 
-.skills-section__container .skills-intro div:nth-child(2) a {
-  color: #00916e;
+.skills-section__container .intro div:nth-child(2) a {
+  color: #06ac85;
 }
 
 .skills-section__container .skills-container {
@@ -115,13 +166,319 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  text-align: left;
   width: 100%;
-  border: solid purple 1px;
+  padding-top: 20px;
 }
 
 .skills-section__container .skills-container .skill {
-  width: 25%;
-  border: solid blue 1px;
+  width: 23%;
+}
+
+.skills-section__container .skill div, .skills-section__container .skill p {
+  font-size: 0.8rem;
+}
+
+.skills-section__container .skill h3 {
+  font-size: 1.2rem;
+  padding: 10px 0;
+}
+
+.skills-section__container .skill__icon {
+  height: 38px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.skills-section__container .skill img {
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+}
+
+.skills-section__container .skill .css {
+  width: 38px;
+  height: 38px;
+}
+
+.testimonials-section__container {
+  border-top: solid 1px rgba(179, 175, 175, 0.1);
+  border-bottom: solid 1px rgba(179, 175, 175, 0.1);
+}
+
+.testimonials-section__container .testimonials {
+  width: 100%;
+  padding: 3% 0;
+}
+
+.testimonials-section__container .testimonials .testimonials__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.testimonials-section__container .testimonials .testimonials__cards .testimonial-card {
+  position: relative;
+  background: #0a1720;
+  -webkit-box-shadow: 0 0 0 2px rgba(16, 37, 61, 0.3);
+          box-shadow: 0 0 0 2px rgba(16, 37, 61, 0.3);
+  width: 30%;
+  height: 280px;
+  padding: 3%;
+  font-size: 0.8rem;
+  color: #c5bfbf;
+}
+
+.testimonials-section__container .testimonials .testimonials__cards .testimonial-card__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+}
+
+.testimonials-section__container .testimonials .testimonials__cards .testimonial-card .quote-icon {
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  text-align: center;
+  border-top: 40px solid #06ac85;
+  border-right: 40px solid transparent;
+}
+
+.testimonials-section__container .testimonials .testimonials__cards .testimonial-card .quote-icon i {
+  position: absolute;
+  top: -33px;
+  left: 5px;
+  display: inline-block;
+}
+
+.testimonials-section__container .testimonials .testimonials__cards .testimonial-card__reviewer-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  width: 100%;
+  height: 40%;
+}
+
+.testimonials-section__container .testimonials .testimonials__cards .testimonial-card__reviewer-info img {
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  border: solid 3px #cecbcb;
+}
+
+.testimonials-section__container .testimonials .testimonials__cards .testimonial-card__reviewer-info--info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 70%;
+}
+
+.testimonials-section__container .testimonials button {
+  background: #06ac85;
+}
+
+.testimonials-section__container .testimonials button:hover {
+  background: #0a1720;
+  opacity: 0.8;
+}
+
+.testimonials-section__container .testimonials .rec-dot:hover {
+  -webkit-box-shadow: 0 0 1px rgba(255, 254, 254, 0.856);
+          box-shadow: 0 0 1px rgba(255, 254, 254, 0.856);
+}
+
+.testimonials-section__container .testimonials .rec-dot_active {
+  -webkit-box-shadow: 0 0 1px 3px rgba(255, 254, 254, 0.856);
+          box-shadow: 0 0 1px 3px rgba(255, 254, 254, 0.856);
+}
+
+.projects-section__container .projects-wrapper {
+  padding: 2% 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.projects-section__container .projects-wrapper .project-card {
+  width: 48%;
+  height: 200px;
+  margin-bottom: 3%;
+  background: #0a1720;
+  position: relative;
+}
+
+.projects-section__container .projects-wrapper .project-card:hover .card-after {
+  display: block;
+  position: absolute;
+  top: 45%;
+  left: 30%;
+  width: 100%;
+  height: 100%;
+}
+
+.projects-section__container .projects-wrapper .project-card:hover .card-before {
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  -webkit-filter: brightness(0.4);
+          filter: brightness(0.4);
+}
+
+.projects-section__container .projects-wrapper .project-card h3 {
+  font-size: 1rem;
+  text-decoration: underline;
+  padding: 2% 0;
+}
+
+.projects-section__container .projects-wrapper .project-card div {
+  font-size: 0.8rem;
+}
+
+.projects-section__container .projects-wrapper .project-card .card-before {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-shadow: 0 0 0 2px rgba(16, 37, 61, 0.3);
+          box-shadow: 0 0 0 2px rgba(16, 37, 61, 0.3);
+}
+
+.projects-section__container .projects-wrapper .project-card .card-before__img {
+  width: 40%;
+  height: 200px;
+}
+
+.projects-section__container .projects-wrapper .project-card .card-before__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.projects-section__container .projects-wrapper .project-card .card-before__content {
+  width: 55%;
+  height: 100%;
+  color: #c5bfbf;
+  line-height: 20px;
+}
+
+.projects-section__container .projects-wrapper .project-card .card-before__content .client {
+  padding-top: 3%;
+  color: #757272;
+  font-size: 0.7rem;
+}
+
+.projects-section__container .projects-wrapper .project-card .card-after {
+  display: none;
+}
+
+.projects-section__container .projects-wrapper .project-card .card-after .btn-dark {
+  background: #2f3847;
+  border: solid 1px #293241;
+  color: get-text-color(#07121b);
+  margin: 0 1%;
+  width: 150px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.projects-section__container .projects-wrapper .project-card .card-after .btn-dark a {
+  color: #fff;
+  font-weight: 700;
+}
+
+.projects-section__container .projects-wrapper .project-card .card-after .btn-dark:hover {
+  background: #1a2029;
+}
+
+.projects-section__container .portfolio {
+  text-align: center;
+}
+
+.projects-section__container .portfolio button {
+  margin: 0;
 }
 
 .portfolio {
@@ -148,8 +505,8 @@ a:link {
 .btn {
   margin: 5% 0;
   text-transform: capitalize;
-  background: #00916e;
-  border: solid 1px #00916e;
+  background: #06ac85;
+  border: solid 1px #06ac85;
 }
 
 .btn i {
@@ -157,13 +514,13 @@ a:link {
 }
 
 .btn:hover {
-  background: #00916e;
-  border: solid 1px #00916e;
+  background: #066d55;
+  border: solid 1px #066d55;
 }
 
 .dark-mode {
   background: #07121b;
-  color: #cfcccc;
+  color: #fcf6f6;
 }
 
 .light-mode {
@@ -175,6 +532,12 @@ a:link {
   margin-left: 280px;
 }
 
+@media (max-width: 990px) {
+  .main-wrapper, footer {
+    margin-left: 0;
+  }
+}
+
 header {
   background: #1b2a41;
   z-index: 99;
@@ -183,7 +546,7 @@ header {
   height: 100%;
   text-align: center;
   padding: 30px 20px;
-  color: #cfcccc;
+  color: #fcf6f6;
 }
 
 @media (max-width: 990px) {
@@ -243,19 +606,19 @@ header {
 }
 
 .menu__intro--links a i {
-  color: #00916e;
+  color: #06ac85;
 }
 
 .menu__intro--links a i:hover {
-  color: #cfcccc;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  color: #fcf6f6;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
 
 .menu__intro--links a .light {
-  color: #cfcccc !important;
+  color: #fcf6f6 !important;
 }
 
 .menu__nav-bar {
@@ -294,9 +657,9 @@ header {
 }
 
 .menu__nav-bar--links a:hover {
-  color: #cfcccc;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  color: #fcf6f6;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   text-shadow: 0 0 15px #fff, 0 0 20px #367a5d, 0 0 25px #367a5d, 0 0 30px #367a5d, 0 0 35px #367a5d, 0 0 40px #367a5d, 0 0 45px #367a5d;
 }
 
@@ -305,7 +668,7 @@ header {
 }
 
 .menu__nav-bar--links .dark {
-  color: #00916e;
+  color: #06ac85;
 }
 
 .menu__nav-bar .hiremeBtn-light {
@@ -324,6 +687,7 @@ header {
   }
   .menu__nav-bar button {
     margin: 2%;
+    width: 80%;
   }
 }
 
@@ -374,7 +738,31 @@ header {
 .menu__dark-mode .dark-mode-icon {
   width: 50px;
   height: 28px;
-  border: solid 2px #00916e;
+  border: solid 2px #06ac85;
+}
+
+.menu__dark-mode .dark-mode-icon {
+  width: 50px;
+  height: 28px;
+  border-radius: 16px;
+  border: solid 2px #06ac85;
+  position: relative;
+  margin-top: 5px;
+  cursor: pointer;
+}
+
+.menu__dark-mode .dark-mode-icon::after {
+  content: '';
+  width: 50%;
+  height: 80%;
+  display: block;
+  position: relative;
+  background: #06ac85;
+  left: 46%;
+  top: 10%;
+  border-radius: 65px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .menu__dark-mode .light {
@@ -387,14 +775,34 @@ header {
 }
 
 @media (max-width: 990px) {
-  .menu__intro .menu__nav-bar .menu__dark-mode {
-    display: none;
+  .menu__name {
+    height: 40px;
+  }
+  .menu .sections-wrapper {
+    opacity: 0;
+    height: 0;
+    -webkit-transition: height 0.2s ease;
+    transition: height 0.2s ease;
   }
   .menu .menu-hidden {
-    display: none;
+    opacity: 0;
+    height: 1px;
+    -webkit-transition: height 0.2s ease;
+    transition: height 0.2s ease;
   }
   .menu .menu-display {
-    display: block;
+    opacity: 1;
+    height: 500px;
+    padding-top: 10px;
+  }
+}
+
+@media (max-width: 650px) {
+  .menu .menu-display {
+    height: 320px;
+  }
+  .menu__intro {
+    display: none;
   }
 }
 
@@ -420,15 +828,18 @@ main {
   width: 100%;
 }
 
-@media (max-width: 990px) {
-  .menu__dark-mode {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
+footer {
+  margin: 3% 0 0 0;
+}
+
+footer div {
+  text-align: center;
+  padding-bottom: 8px;
+  text-transform: capitalize;
+  font-size: 0.8rem;
+}
+
+footer div i {
+  color: #06ac85;
 }
 /*# sourceMappingURL=App.css.map */
